@@ -33,6 +33,7 @@ Version 1.11.4+dev:
      in alphabetical order
    * Added -Wno-null-conversion to the CMake pedantic flags.
    * Changed: Decreased the pango cairo dependency to version 1.21.3.
+   * Changed: Mark system headers as system headers in CMake.
 
 Version 1.11.4:
  * AI:
